[package]
name = "rust_on_aws"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "0.0.25-alpha" }
aws-sdk-dynamodb = { version = "0.0.25-alpha" }
serde_dynamo = { version = "3.0.0-alpha.1", features = ["aws-sdk-dynamodb+0_0_25-alpha"] }
tokio = { version = "1", features = ["full"] }
lambda_runtime = "^0.5.1"
serde = "^1.0.137"
serde_json = "^1.0.81"
serde_derive = "^1.0.137"
simple-error = "0.2.3"
truthy = "1.1.0"
log = "^0.4"
simple_logger = "^1"
s3 = {git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.15-alpha", package = "aws-sdk-s3"}
chrono = "0.4"
uuid = { version = "^0.8", features = ["v4"] }
